--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -1,5 +1,5 @@
 {% load static %}
-<bootstrap class="myCarousel"></bootstrap>
+<bootsrap class="myCarousel"><bootstrap>
 <!doctype html>
 <html lang="en" data-bs-theme="light">
 
