--- a/frontend/templates/company/company.html
+++ b/frontend/templates/company/company.html
@@ -207,7 +207,7 @@
           <div class="card shadow-sm">
             <img src="https://cdn.vox-cdn.com/thumbor/2ECtQus43_-tjqtlxy0WE8peSEQ=/0x0:2012x1341/1400x1050/filters:focal(1006x670:1007x671)/cdn.vox-cdn.com/uploads/chorus_asset/file/15483559/google2.0.0.1441125613.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Google, a tech titan renowned for its innovation, leads the way in transforming digital experiences. From its ubiquitous search engine to cutting-edge cloud services, Google's relentless pursuit of excellence sets the standard for the industry.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -222,7 +222,7 @@
           <div class="card shadow-sm">
             <img src="https://thumbs.dreamstime.com/b/amazon-logo-editorial-vector-illustration-market-136495269.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Amazon stands as a global juggernaut in e-commerce, cloud computing, and digital streaming, continually reshaping the landscape of online retail and technology infrastructure.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -237,7 +237,7 @@
           <div class="card shadow-sm">
             <img src="https://pbs.twimg.com/media/EyjQfGYU8AEs0xE.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Microsoft, a pioneer in personal computing, software development, and cloud services, remains a cornerstone of the tech industry, empowering businesses and individuals worldwide with innovative solutions.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -253,7 +253,7 @@
           <div class="card shadow-sm">
             <img src="https://akm-img-a-in.tosshub.com/businesstoday/images/story/202106/tcs_logo_1200_020621101143.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">TCS (Tata Consultancy Services) epitomizes excellence in IT services, digital solutions, and consulting, driving digital transformation for businesses across various industries with its expertise and global reach.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -268,7 +268,14 @@
           <div class="card shadow-sm">
             <img src="https://media.designrush.com/inspiration_images/134937/conversions/_1511454480_993_jpmorgan-mobile.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">J.P. Morgan, a leading global financial services firm, combines cutting-edge technology with financial expertise to deliver innovative solutions in banking, asset management, and investment services, driving forward progress in the financial industry.
+
+
+
+
+
+
+              </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -283,7 +290,7 @@
           <div class="card shadow-sm">
             <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/IBM_logo_in.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">IBM, a trailblazer in computing and technology, continues to push the boundaries of innovation with its advancements in artificial intelligence, cloud computing, and quantum computing, shaping the future of enterprise solutions and scientific research.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
