linked companies page

--- a/frontend/templates/boiler.html
+++ b/frontend/templates/boiler.html
@@ -475,7 +475,7 @@
                     class="nav-link d-flex align-items-center gap-2 active"
                     aria-current="page"
                     href="#"
-                    onclick="window.location.href='/dashboard.html'"
+                    onclick="window.location.href='dashboard/'"
                   >
                     <svg class="bi"><use xlink:href="#house-fill"></use></svg>
                     Dashboard
@@ -488,7 +488,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" href="#" onclick="window.location.href='/company.html'">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building-up" viewBox="0 0 16 16">
                       <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.854 1.5 1.5a.5.5 0 0 1-.708.708L13 11.707V14.5a.5.5 0 0 1-1 0v-2.793l-.646.647a.5.5 0 0 1-.708-.708l1.5-1.5a.5.5 0 0 1 .708 0"/>
                       <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6.5a.5.5 0 0 1-1 0V1H3v14h3v-2.5a.5.5 0 0 1 .5-.5H8v4H3a1 1 0 0 1-1-1z"/>
