--- a/frontend/templates/company/company.html
+++ b/frontend/templates/company/company.html
@@ -165,7 +165,7 @@
           <ul class="list-unstyled">
             <li><a href="#" class="text-white">Follow on Twitter</a></li>
             <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
+            <li><a href="#" class="text-white">Email us</a></li>
           </ul>
         </div>
       </div>
@@ -209,11 +209,8 @@
             <div class="card-body">
               <p class="card-text">Google, a tech titan renowned for its innovation, leads the way in transforming digital experiences. From its ubiquitous search engine to cutting-edge cloud services, Google's relentless pursuit of excellence sets the standard for the industry.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
+               
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -224,11 +221,8 @@
             <div class="card-body">
               <p class="card-text">Amazon stands as a global juggernaut in e-commerce, cloud computing, and digital streaming, continually reshaping the landscape of online retail and technology infrastructure.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
+                
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -239,11 +233,8 @@
             <div class="card-body">
               <p class="card-text">Microsoft, a pioneer in personal computing, software development, and cloud services, remains a cornerstone of the tech industry, empowering businesses and individuals worldwide with innovative solutions.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
+               
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -255,11 +246,8 @@
             <div class="card-body">
               <p class="card-text">TCS (Tata Consultancy Services) epitomizes excellence in IT services, digital solutions, and consulting, driving digital transformation for businesses across various industries with its expertise and global reach.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
+               
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -277,11 +265,8 @@
 
               </p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
+              
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -290,13 +275,12 @@
           <div class="card shadow-sm">
             <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/IBM_logo_in.jpg" class="card-img-top" style="width: 100%; height: 225px; object-fit: cover;" alt="Image 1">
             <div class="card-body">
-              <p class="card-text">IBM, a trailblazer in computing and technology, continues to push the boundaries of innovation with its advancements in artificial intelligence, cloud computing, and quantum computing, shaping the future of enterprise solutions and scientific research.</p>
+              <p class="card-text">IBM, a trailblazer in computing and technology, continues to push the boundaries of innovation with its advancements in AI, cloud computing, and quantum computing, shaping the future of enterprise solutions and scientific research.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -309,10 +293,9 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -324,10 +307,9 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                 
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
@@ -339,8 +321,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                 
                 </div>
                 <small class="text-body-secondary">9 mins</small>
               </div>
