--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -186,8 +186,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+         
           <a class="btn btn-outline-success mx-2" href="{% url 'accounts:login' %}" aria-disabled="true">Login</a>
         </form>
       </div>
@@ -209,7 +208,7 @@
                     <div class="carousel-caption text-start">
                         <h1>Sign Up</h1>
                         <p class="opacity-75">Join our platform today and start creating professional resumes, connecting with potential employers, and exploring job opportunities.</p>
-                        <p><a class="btn btn-lg btn-primary" href="/signup.html">Sign Up</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="/signup">Sign Up</a></p>
                     </div>
                 </div>
             </div>
