--- a/profiles/templates/create_profile.html
+++ b/profiles/templates/create_profile.html
@@ -46,6 +46,22 @@
                 {% render_field form.email class="form-control" %}
             </div>
 
+            <div class="field-wrapper">
+                <label for="id_linkedin_url">LinkedIn URL:</label>
+                {% render_field form.linkedin_url class="form-control" %}
+            </div>
+            
+            <div class="field-wrapper">
+                <label for="id_instagram_url">Instagram URL:</label>
+                {% render_field form.instagram_url class="form-control" %}
+            </div>
+            
+            <div class="field-wrapper">
+                <label for="id_facebook_url">Facebook URL:</label>
+                {% render_field form.facebook_url class="form-control" %}
+            </div>
+            
+
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
